_sass/new-main.scss
:root {
    box-sizing: border-box;
    font-size: 1em;
}

*,
::before,
::after {
    box-sizing: inherit;
}


body {
    margin: 0;
}

.wrapper {
    width: 60%;
    margin: 0 auto;
}

.header {
    background-color: $header-bg-color;
    color: $header-fg-color;
    font-family: $header-font;
    
    .wrapper {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
    }

    header {
        margin-right: auto;

        h1 {
            font-size: 2rem;
            padding: 0;
            margin: 0;
        }
    }

    nav ul {
        display: flex;
        margin: 0;
        padding: 0;
        padding-top: 2px;
        list-style: none;

        li a {
            display: block;
            padding: 1em 1em 0.5em 1em;
            color: $header-fg-color;
            font-weight: bold;
            text-decoration: none;
        }

        li a:hover {
            text-decoration: underline;
        }

        li a.current {
            background-color: $header-fg-color;
            color: $header-bg-color;
            border-radius: 5px 5px 0 0;
        }
    }
}

